rabak-0.6rc3
- changed method of detecting script directory
- remote to local backups
- remote to remote backups (very cool)
- make base class for database backup types
- changed ssh handling to pure ssh (Net::SSH::Perl slow and stubborn)
- changed class hierarchy
- support for multiple sources per backset
- subject of admin mail now contains summary
- packer for db dumps is now configurable

rabak-0.6rc2
- better filter expansion

rabak-0.6rc1
- new include/exclude handling via rsync filter
- patched remote targets (supports now db dumps as well)
- various bug fixes

rabak-0.5 rc1
- remote targets are now supported (file only)
- target objects implemented
- "istarget" and "targetgroup" are now deprecated

rabak-0.4
- changed target mechanism
- changed logging mechanism
- mount token "firstof" removed

rabak-0.3.4
- introducing verbosity levels to decrease output (switch.verbose)
- complete redesign of target group/value check and RabakLib::Set::_mount()
- devices, mounted anywhere else, with no/invalid rabak id file will not be unmounted anymore
- rabak.pl can now be called from any directory ("use" commands implemented with "eval")

rabak-0.3.2
- Cleaned up RabakLib::Conf and RabakLib::Set. Is more perl-oo-ish now.
- Logging is now done by RabakLib::Log
- Started experimental 'admin' module

rabak-0.3.1

- Added INCLUDE directive for config files
- Minor Bug fixes
- Updated sample config files
- Updated docs

rabak-0.3

- additional config parameters for mount type, mount options and rsync options
- optional test remaining disk space on target after finishing backup
- bugfixes for mysql and postgres implentations
